--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.0",
+    "get-port-please": "^3.2.0",
+    "grammex": "^3.1.12",
+    "graphmatch": "^1.1.1",
     "jose": "^5.9.6",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
