--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@swc/helpers": "^0.5.18",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcrypt": "^6.0.0",
@@ -46,7 +47,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.563.0",
-    "next": "16.1.6",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "openai": "^6.21.0",
     "pg": "^8.18.0",
